--- a/hterm/index.html
+++ b/hterm/index.html
@@ -28,7 +28,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <script src="hterm_deps.js"></script>
         <script src="hterm_resources.js"></script>
         <script src="hterm.js"></script>
-        <script type="text/javascript" src="qwebchannel.js"></script>
+        <script type="text/javascript" src="qrc:///qtwebchannel/qwebchannel.js"></script>
 
         <style>
             html {
